cmd/platform/kubernetes/resource/ingress/ingress.origin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grpc-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  tls:
    - hosts:
        - "*.m3o.com"
      secretName: proxy-tls
  rules:
    - host: "proxy.m3o.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: micro-proxy
                port:
                  number: 8081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - "*.m3o.app"
        - "*.m3o.com"
      secretName: api-tls
  rules:
    - host: "api.m3o.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: micro-api
                port:
                  number: 8080
    - host: "*.m3o.app"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: micro-api
                port:
                  number: 8080
