cmd/platform/kubernetes/resource/ingress/ingress.yaml
#apiVersion: networking.k8s.io/v1beta1
#kind: Ingress
#metadata:
#  name: grpc-ingress
#  annotations:
#    kubernetes.io/ingress.class: "nginx"
#    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
#spec:
#  tls:
#  - hosts:
#    - "*.mcbeam.cc"
#    secretName: proxy-tls
#  rules:
#  - host: "proxy.mcbeam.cc"
#    http:
#      paths:
#      - path: /
#        pathType: Prefix
#        backend:
#          serviceName: micro-proxy
#          servicePort: 8081
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: http-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - "*.mcbeam.dev"
    secretName: api-tls
  rules:
  - host: "*.mcbeam.cc"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: micro-api
          servicePort: 8080
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - "*.mcbeam.cc"
      secretName: api-tls
  rules:
  - host: "grafana.mcbeam.cc"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            serviceName: grafana
            servicePort: 80
  - host: "prometheus-server.mcbeam.cc"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            serviceName: prometheus-server
            servicePort: 80
  - host: "prometheus-server.mcbeam.cc"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            serviceName: prometheus-server
            servicePort: 80
